# ProjectVote

./: .env.example  .gitignore  .kacl.yaml  .kacl.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  applications.db  applications_test.db  database.py  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  main.py  models.py  pyproject.toml  ruff.toml
.github/workflows/: main.yml
ai_docs/: masterplan.md  requirements.md  task_1_1.md  task_1_2.md  task_1_3.md  task_1_4.md  task_1_5.md  task_2_1.md  task_2_2.md  task_2_3.md  task_2_4.md  task_2_5.md  task_2_6.md  task_2_7.md  task_3_1.md  task_3_2.md  task_3_3.md  task_3_4.md  task_3_5.md  task_4_1.md  task_4_2.md  task_4_3.md  task_4_4.md  task_4_5.md  task_5_1.md  task_5_2.md  task_6_1.md  task_6_2.md  task_6_3.md  task_6_4.md  task_7_1.md  task_7_2.md  task_7_3.md
alembic/: env.py
alembic/versions/: 000_initial_schema.py  f07b511c58dc_added_date_columns.py
src/lvd_fv_form/backend/: config.py  database.py  email_service.py  main.py  models.py
src/lvd_fv_form/backend/templates/email/: final_decision_applicant.html  new_application.html
src/lvd_fv_form/frontend/: package-lock.json
src/lvd_fv_form/frontend/src/: App.tsx  apiService.ts  index.css
src/lvd_fv_form/frontend/src/components/: ApplicationForm.tsx  Archive.tsx  VotingForm.tsx
src/projectvote/backend/: config.py  database.py  email_service.py  main.py  models.py
src/projectvote/backend/templates/email/: application_confirmation.html  final_decision_applicant.html  final_decision_board.html  new_application.html
src/projectvote/frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
src/projectvote/frontend/src/: App.tsx  apiService.ts
src/projectvote/frontend/src/components/: ApplicationForm.tsx  Archive.tsx  VotingForm.tsx
templates/: archive.html  index.html  submission_success.html  vote.html  vote_success.html
tests/: conftest.py  test_config.py  test_database.py  test_email_service.py  test_file_upload.py  test_lifespan.py  test_main.py
