[project]
name = "projectvote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.14",
    "fastapi-mail>=1.5.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
    --strict-markers
    --doctest-modules
"""
pythonpath = ["src"]
testpaths = [
    "tests",
]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
