[project]
name = "projectvote"
version = "0.1.0"
description = "Containerized application designed to simplify the entire funding application lifecycle."
readme = "README.md"
keywords = ["funding", "application", "management", "voting", "workflow", "fastapi", "python", "docker"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Topic :: Database",
]
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.2.1",
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.14",
    "fastapi-mail>=1.5.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "python-kacl>=0.6.7",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]

[project.urls]
homepage = "https://github.com/andreas-vester/projectvote"
repository = "https://github.com/andreas-vester/projectvote"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
    --strict-markers
    --doctest-modules
"""
pythonpath = ["src"]
testpaths = [
    "tests",
]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
asyncio_mode = "auto"
markers = ["settings_override: override application settings for a test"]
